[tool.poetry]
name = "pynltk"
version = "0.1.0"
description = "artificial intelligence project toolkit"
authors = ["Htring <1129501586@qq.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"
selenium = "^4.7.2"
torch = "1.12"
jieba = "^0.42.1"
numpy = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
